--- a/demo/demo.html
+++ b/demo/demo.html
@@ -323,22 +323,23 @@ $('#my-list').instaFilta({
 });</pre>
       </div>
     </section>
-<!--
+
     <section class="section" id="s8">
       <div class="l-1-2">
         <div class="padded-content-h">
           <h2 class="section-title">Categorize/tag items</h2>
           <p>This is a bit similar to using sections, but it has some important differences. You can tag individual target items with several categories. Do this by defining one or more (comma separated string or array) categories in a data-attribute associated with the <em>categoryDataAttr</em> option. You can then use the <em>filterCategory</em> method to perform filtering based on those categories.</p>
           <p>In this example, a select box is used to filter out humans and machines. Note that "RoboCop" exists in both the <em>machine</em> category and the <em>human</em> category.</p>
+          <p>Also note that the result will be filtered on page load if an option is selected from start.</p>
         </div>
       </div>
       <div class="box l-1-2">
         <div class="example" id="ex8">
           <fieldset class="controls">
-            <input type="text" id="ex8f" placeholder="Type here to filter">
-            <select id="ex8s">
+            <input type="text" class="instafilta-trigger" placeholder="Type here to filter">
+            <select class="instafilta-trigger">
               <option value="">Show all</option>
-              <option value="machine">Machines</option>
+              <option value="machine" selected="selected">Machines</option>
               <option value="human">Humans</option>
               <option value="non-fictional">Non-fictional</option>
             </select>
@@ -347,32 +348,28 @@ $('#my-list').instaFilta({
             <li><span class="instafilta-target" data-instafilta-category="machine">R2-D2</span></li>
             <li><span class="instafilta-target" data-instafilta-category="machine">Terminator</span></li>
             <li><span class="instafilta-target" data-instafilta-category="human">John Connor</span></li>
-            <li><span class="instafilta-target" data-instafilta-category="human,non-fictional">Andreas Larsson</span></li>
+            <li><span class="instafilta-target" data-instafilta-category="human,non-fictional">Andreas Weber</span></li>
             <li><span class="instafilta-target" data-instafilta-category="machine">Johnny 5</span></li>
             <li><span class="instafilta-target" data-instafilta-category="human">Gordon Freeman</span></li>
             <li><span class="instafilta-target" data-instafilta-category="machine">Wall-E</span></li>
             <li><span class="instafilta-target" data-instafilta-category="human,machine">RoboCop</span></li>
           </ul>
-          <h3 class="lesser-title">If the HTML looks like this..</h3>
+          <h3 class="lesser-title">Example HTML</h3>
           <pre class="box box-code">
+&lt;select class="instafilta-trigger">
+  &lt;option value="">Show all&lt;/option>
+  &lt;option value="machine" selected="selected">Machines&lt;/option>
+  &lt;option value="human">Humans&lt;/option>
+  &lt;option value="non-fictional">Non-fictional&lt;/option>
+&lt;/select>
+
 &lt;span class="instafilta-target" data-instafilta-category="human">Gordon Freeman&lt;/span>
 &lt;span class="instafilta-target" data-instafilta-category="machine">Wall-E&lt;/span>
-&lt;span class="instafilta-target" data-instafilta-category="human,machine,both">RoboCop&lt;/span></pre>
-          <h3 class="lesser-title">..then we can filter it by category like this</h3>
-          <pre class="box box-code">
-var insta = $('#filtering').instaFilta();
-
-/* This will show "Gordon Freeman" and "RoboCop" */
-insta.filterCategory('human');
-
-/* This will show "Wall-E" and "RoboCop" */
-insta.filterCategory('machine');
-
-/* This will only show "RoboCop" */
-insta.filterCategory('both');</pre>
+&lt;span class="instafilta-target" data-instafilta-category="human,machine">RoboCop&lt;/span></pre>
       </div>
     </section>
 
+    <!--
     <section class="section" id="s9">
       <div class="l-1-2">
         <div class="padded-content-h">
